<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ProjetoFinal</string>
    <string name="limos">Limos</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="login_da_main">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="insira_seu_email">E-mail:</string>
    <string name="insira_um_email">Insira um e-mail</string>
    <string name="insira_uma_senha">Digite uma senha</string>
    <string name="senha">Senha:</string>
    <string name="btn_entrar">Entrar</string>
    <string name="nome">Nome*</string>
    <string name="e_mail_cadastro">E-mail*</string>
    <string name="bairro">Bairro*</string>
    <string name="cidade">Cidade*</string>
    <string name="estado">Estado*</string>
    <string name="alimento_a_ser_doado">Alimento a ser doado*</string>
    <string name="quantidade">Quantidade*</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Próximo</string>
    <string name="senha_cadastro_instituicao">Senha*</string>
    <string name="confirmar_senha_cadastro_instituicao">Confirmar senha*</string>
    <string name="cnpj_cadastro">CNPJ*</string>
    <string name="nome_do_estabelecimento_cadastro">Nome do estabelecimento*</string>
    <string name="telefone_cadastro">Telefone*</string>
    <string name="cadastro_de_endereco">Cadastro de Endereço</string>
    <string name="preencha_o_endereco_do_estabelecimento">Preencha o endereço do estabelecimento</string>
    <string name="agradecemos_sua_doa_o_enviaremos_ao_seu_e_mail_o_local_mais_pr_ximo_para_voc_poder_levar_a_sua_doacao">Agradecemos sua doação, enviaremos ao seu e-mail o local mais próximo para você poder levar a sua doação!</string>
    <string name="n_s_da_equipe_limos_agradecemos_sua_colabora_o">Nós da equipe Limos agradecemos sua colaboração!</string>
    <string name="nos_da_limos_intermediamos_a_doacao_entre_o_doador_e_o_instituto_que_recebera_a_doacao_visamos_ter_como_objetivo_ajudar_na_facilitacao_na_distribuicao_de_alimentos_nas_comunidades_carentes_diante_as_complicacoes_da_pandemia_do_covid_19">Nós da Limos intermediamos a doação entre o doador e o instituto que receberá a doação. Visamos ter como objetivo ajudar na facilitação na distribuição de alimentos nas comunidades carentes diante as complicações da pandemia do Covid-19.</string>
    <string name="notificacoes_fragment">Notificações</string>
    <string name="doacoes_fragment">Doações</string>
    <string name="perfil_fragment">Perfil</string>
    <string name="vamos_trabalhar_para_fazer_chegar_doa_es_de_alimentos_e_produtos_de_primeira_necessidade_popula_o_da_regi_o_a_sede_do_instituto_vai_funcionar_como_um_centro_de_recebimento_e_distribui_o_de_doa_es_al_m_disso_tamb_m_estamos_buscando_o_apoio_de_empresas_e_doadores_para_levar_diferentes_tipos_de_ajuda_s_fam_lias_voc_pode_ajudar_doando_cestas_b_sicas_e_itens_de_primeira_necessidade_em_nossa_sede_que_fica_em_uma_avenida_de_f_cil_acesso_junto_comunidade">Vamos trabalhar para fazer chegar doações de alimentos e produtos de primeira necessidade à população da região. A sede do instituto vai funcionar como um centro de recebimento e distribuição de doações. Além disso, também estamos buscando o apoio de empresas e doadores para levar diferentes tipos de ajuda às famílias. Você pode ajudar doando cestas básicas e itens de primeira necessidade em nossa sede, que fica em uma avenida de fácil acesso junto à comunidade.</string>
    <string name="title_aviso">Aviso!</string>
    <string name="message_campos_invalido_branco">Há campos inválidos ou em branco!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digite_um_nome">digite um nome</string>
    <string name="digite_um_email">digite um email</string>
    <string name="digite_um_bairro">digite um bairro</string>
    <string name="digite_um_estado">digite um estado</string>
    <string name="cep">CEP*</string>
    <string name="logradouro">Logradouro*</string>
    <string name="numero">Numero*</string>
    <string name="complemento">Complemento*</string>
    <string name="finalizar">Finalizar</string>
    <string name="sair">Sair</string>
    <string name="maisop_es">maisOpções</string>
    <string name="fotoperfil">fotoPerfil</string>
    <string name="instituto_lion_king">Instituto Lion King</string>
    <string name="descri_o">Descrição</string>
    <string name="bot_osair">botãoSair</string>
    <string name="numero_de_telefone">1199999–9999/11 92092-3029</string>
    <string name="um_trabalho_de">Um trabalho de:</string>
    <string name="desenvolvedor_vitor_messias">Desenvolvedor Vítor Messias</string>
    <string name="michaelle_louise_sim_o_pereira">Michaelle Louise Simão Pereira</string>
    <string name="yasmin_luize_costa_macedo">Yasmin Luize Costa Macedo</string>
    <string name="gustavo_ara_jo_da_silva">Gustavo Araújo da Silva</string>
    <string name="robert_de_souza_monteiro">Robert De Souza Monteiro</string>
    <string name="vitor_viana_soares_messias">Vítor Viana Soares Messias</string>
    <string name="imagemlogo">ImagemLogo</string>
    <string name="doar_agora">Doar Agora!</string>
    <string name="sobre">Sobre</string>
    <string name="doa_o_de_60_cestas_b_sicas_na_regi_o_do_graja">Doação de 60 cestas básicas na região do grajaú.</string>
    <string name="foi_registrado_1200_doa_es_no_ultimo_m_s">Foi registrado 1200 doações no ultimo mês.</string>
    <string name="foi_doado_um_total_de_900_cestas_b_sicas_no_ultimo_m_s">Foi doado um total de 900 cestas básicas no ultimo mês.</string>
    <string name="doa_o_de_30_cestas_b_sicas_na_regi_o_da_cidade_dutra">Doação de 30 cestas básicas na região da cidade dutra.</string>
    <string name="doa_o_de_100_cestas_b_sicas_na_regi_o_de_parais_polis">Doação de 100 cestas básicas na região de paraisópolis.</string>
    <string name="foi_registrado_500_doa_es_na_ultima_semana">Foi registrado 500 doações na ultima semana</string>
    <string name="imglogo">imgLogo</string>
    <string name="logoyas">logoYas</string>
    <string name="logoetec">logoEtec</string>
    <string name="seta">Seta</string>
    <string name="bolinhadenotifica_oexemplo">bolinhaDeNotificaçãoExemplo</string>
    <string name="veja_sugest_es_de_lugares">Veja sugestões de lugares!</string>
    <string name="voc_recebeu_doa_o">Você recebeu doação</string>
    <string name="seja_bem_vindo">Seja bem-vindo!</string>
    <string name="gustavo_ara_jo_michaelle_louise_robert_monteiro_v_tor_messias_yasmin_luize">Gustavo Araújo Michaelle Louise Robert Monteiro Vítor Messias Yasmin Luize</string>

</resources>